<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="180dp"
    android:layout_height="120dp"
    android:layout_marginBottom="5dp"
    android:orientation="horizontal"
    android:padding="20dp"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    app:cardBackgroundColor="#6AA68A"
    app:cardCornerRadius="5dp"
    app:strokeColor="@color/black"
    app:strokeWidth="1dp">


    <CheckBox
        android:id="@+id/checkbox_drink"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="top"

        android:text="@string/checkbox_drink_1"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:theme="@style/MyCheckboxStyle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginStart="33dp"
        android:layout_marginTop="15dp"
        android:text="@string/text_wait_time_1"
        android:textColor="@android:color/black"
        android:textSize="11sp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/image_drink"

        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:importantForAccessibility="no"
        android:adjustViewBounds="true"

        android:scaleType="fitXY"
        android:src="#FFFFFF"
        tools:srcCompat="@drawable/limonada" />


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="7dp">


        <TextView
            android:id="@+id/text_drink_description"
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="bottom"
            android:lines="4"
            android:text="@string/text_drink_description_1"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_drink_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/text_drink_price_1"
            android:textColor="#9B1705"
            android:textStyle="bold" />
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>