<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_appetizer1"
    android:layout_width="wrap_content"
    android:layout_height="120dp"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    app:strokeColor="@color/black"
    app:strokeWidth="1dp"
    app:cardBackgroundColor="#6AA68A">




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="170dp"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkbox_appetizer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:checked="false"
            android:gravity="top|start"
            android:theme="@style/MyCheckboxStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="-16dp" />

        <ImageView
            android:id="@+id/image_appetize"
            android:layout_width="85dp"
            android:layout_height="120dp"
            android:layout_gravity="end"
            android:contentDescription="@string/temporario"
            android:scaleType="centerCrop"
            android:src="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
          />


        <TextView
            android:id="@+id/text_appetizer"
            android:layout_width="80dp"
            android:layout_height="58dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/text_appetozer_1"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/text_appetizer_wait_time"
            app:layout_constraintEnd_toStartOf="@+id/image_appetize"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_appetizer_wait_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/text_wait_time_1"
            android:textColor="@android:color/black"
            android:textSize="11sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/text_appetizer_price"
            app:layout_constraintEnd_toStartOf="@+id/image_appetize"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_marginBottom="5dp"
            android:id="@+id/text_appetizer_price"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/text_appetozer_price_1"
            android:textColor="#9B1705"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView >